syntax = "proto3";
package agent;

option java_package = "com.proto.agent";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message ProtoFindByIdRequest {
  int64 id = 1;
}

message ProtoTicketRequest {
  string barcode = 1;
  string cashierCode = 2;
  string betType = 3;
  double stakeAmount = 4;
  double totalWinAmount = 5;
  double totalPayAmount = 6;
  int64 betTime = 7;
  string ticketStatus = 8;
  double odd = 9;
  repeated ProtoTicketBetlineRequest protoTicketBetlineRequest = 10;
}

message ProtoTicketBetlineRequest {
  int64 ticketId = 1;
  string event = 2;
  string sportName = 3;
  string languageName = 4;
  string categoryName = 5;
  int64 eventStartTime = 6;
}

message ProtoTicketResponse {
  int64 id = 1;
  string barcode = 2;
  string cashierCode = 3;
  string betType = 4;
  double stakeAmount = 5;
  double totalWinAmount = 6;
  double totalPayAmount = 7;
  float betTime = 8;
  string ticketStatus = 9;
  double odd = 10;
  repeated ProtoTicketBetlineResponse protoTicketBetlineResponse = 11;
}

message ProtoTicketBetlineResponse {
  int64 id = 1;
  int64 ticketId = 2;
  string event = 3;
  string sportName = 4;
  string languageName = 5;
  string categoryName = 6;
  int64 eventStartTime = 7;
}

service ProtoTicketService {
  rpc findById(ProtoFindByIdRequest) returns(ProtoTicketResponse);
  rpc createTicket(ProtoTicketRequest) returns(ProtoTicketResponse);
}